--- a/CSharp/TobetoPlatformFinalProject-Pair2/Business/Business.csproj
+++ b/CSharp/TobetoPlatformFinalProject-Pair2/Business/Business.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <Folder Include="Abstracts\" />
-    <Folder Include="Concretes\" />
+    <Folder Include="Business\Rules\" />
+    <Folder Include="Rules\" />
   </ItemGroup>
 
   <ItemGroup>
